@@ -1,3 +1,10 @@
+Tue Jan  8 02:14:09 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
+
+        * etc/SQL/CUTS-baseline.sql:
+
+          Reverted the change below and creating a new stored procedure
+          for setting the default baseline metrics.
+
 Mon Jan  7 23:25:24 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
 
         * etc/SQL/CUTS-baseline.sql:
